# itg-cli

./: .gitignore  README.md  __main__.py  commands.py  config-template.yaml  config.py  constants.py  main.py  pyproject.toml  requirements.txt  settings.toml  settings_template.toml  utils.py
commands/: add_pack.py  add_song.py  censor.py
commands/utils/: add_utils.py  constants.py  download_file.py  get_charts.py
itg-cli/: __main__.py  commands.py  config.py
itg_cli/: __init__.py  __main__.py  _config.py  _utils.py  commands.py  config_template.toml
src/itg_cli/: __init__.py  __main__.py  _config.py  _utils.py  commands.py  config_template.toml
