[project]
name="itg-cli"
dynamic = ["version"]
dependencies = [
    "simfile==2.1.1",
    "gdown>=5.2.0",
    "pyrfc6266>=1.0.2",
    "tomlkit>=0.13.2",
    "typer>=0.12.5",
]
requires-python = ">=3.10"
authors = [{name = "Lucas Clark"}]
keywords = ["itg", "cli", "python", "itgmania", "stepmania"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lucdar/itg-cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
itg-cli = "itg_cli.__main__:cli"

[tool.setuptools.dynamic]
version = {attr = "itg_cli.__version__"}

[tool.setuptools.package-data]
itg_cli = ["config_template.toml"]
